tests/tools/net/netdiff/invalidated_neigh/diff_nod.tools
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2024-02-29 13:55:29.247317 by netdiff.py v1_19_0+1092-a49a04372af
<configuration>
    <source value="source.net.xml"/>
    <dest value="dest.net.xml"/>
    <outprefix value="diff"/>
    <copy value="location"/>
</configuration>
-->

<nodes version="1.20" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/nodes_file.xsd">
    <!-- Copied Elements -->
    <node id="S" type="dead_end"/>
    <!-- Deleted Elements -->
    <delete id="E"/>
    <!-- Created Elements -->
    <node id="gneJ0" type="priority" x="42.99" y="100.00"/>
    <!-- Changed Elements -->
    <node id="S" type="dead_end"/>
</nodes>
